--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
           />
           <ul class="nav__links">
             <li>
-              <a class="nav__link">Recipes</a>
+              <a href="#recipes" class="nav__link">Recipes</a>
             </li>
             <li>
-              <a class="nav__link">Book a Table</a>
+              <a href="reservations" class="nav__link">Book a Table</a>
             </li>
             <li>
-              <a class="nav__link">Menu</a>
+              <a href="menu" class="nav__link">Menu</a>
             </li>
             <li>
-              <a class="nav__link">Contact</a>
+              <a href="about" class="nav__link">Contact</a>
             </li>
           </ul>
         </nav>
@@ -86,7 +86,7 @@
       </header>
 
       <main class="content">
-        <section class="recipes">
+        <section id="recipes" class="recipes">
           <h2 class="recipes__title">Recipes</h2>
           <p class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
@@ -121,9 +121,9 @@
             </li>
           </ul>
         </section>
-        <section class="reservations"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section id="reservations" class="reservations"></section>
+        <section id="menu" class="menu"></section>
+        <section id="about" class="about"></section>
       </main>
       <footer class="footer"></footer>
     </div>
