--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
               <a href="#recipes" class="nav__link">Recipes</a>
             </li>
             <li>
-              <a href="reservations" class="nav__link">Book a Table</a>
+              <a href="#reservations" class="nav__link">Book a Table</a>
             </li>
             <li>
-              <a href="menu" class="nav__link">Menu</a>
+              <a href="#menu" class="nav__link">Menu</a>
             </li>
             <li>
-              <a href="about" class="nav__link">Contact</a>
+              <a href="#about" class="nav__link">Contact</a>
             </li>
           </ul>
         </nav>
