--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </li>
           </ul>
         </section>
-        <section id="reservations" class="reservations">
+        <section class="reservations">
           <h2 class="reservation__title">Book a table</h2>
           <form class="reservation__form">
             <fieldset class="form__fieldset">
