--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
             </li>
           </ul>
         </section>
-        <section class="reservations">
+        <section class="reservation">
           <h2 class="reservation__title">Book a table</h2>
-          <form class="reservation__form">
+          <form class="reservation__form form">
             <fieldset class="form__fieldset">
               <label class="form__label" for="name">Name *</label>
               <input
