--- a/index.html
+++ b/index.html
@@ -147,11 +147,14 @@
                 required
               />
             </fieldset>
-            <button class="form__button" type="submit">Book a table</button>
-            <label class="form__label form__label__type_checkbox" for="terms"
+            <button class="form__button">Book a table</button>
+            <label
+              for=""
+              class="form__label form__label_type_checkbox"
+              for="terms"
               ><input
                 type="checkbox"
-                class="form__checkbox"
+                class="form__input"
                 name="terms"
                 id="terms"
                 required
