--- a/index.html
+++ b/index.html
@@ -148,10 +148,7 @@
               />
             </fieldset>
             <button class="form__button">Book a table</button>
-            <label
-              for=""
-              class="form__label form__label_type_checkbox"
-              for="terms"
+            <label class="form__label form__label_type_checkbox" for="terms"
               ><input
                 type="checkbox"
                 class="form__input"
